cmd/api/manifests/01_publisher.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: crypto-trade
  labels:
    app: api
    tier: back
spec:
  selector:
    app: api
    tier: back
  ports:
    - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: crypto-trade
  labels:
    app: api
    tier: back
spec:
  selector:
    matchLabels:
      app: api
      tier: back
  template:
    metadata:
      labels:
        app: api
        tier: back
    spec:
      containers:
        - name: api
          image: mmontes11/crypto-trade-api
          imagePullPolicy: Always
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - name: service-port
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /health
              port: service-port
            initialDelaySeconds: 10
            timeoutSeconds: 3
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /health
              port: service-port
            initialDelaySeconds: 10
            timeoutSeconds: 3
            periodSeconds: 15
